--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,7 @@
 html, body {
   margin: 0;
   padding: 0;
+  width: 1250px;
 }
 .header {
   font-family: Verdana;
@@ -47,6 +48,8 @@ html, body {
     display: flex;
     position: relative;
     top: 100px;
+    justify-content: space-around;
+    margin-bottom: 60px;
   }
 .column {
   display: flex;
@@ -57,4 +60,39 @@ html, body {
 }
 .column.medium {
   width: 300px;
+}
+.column.small {
+  width: 240px;
+}
+.article p {
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
+}
+.title {
+  font-family: Georgia;
+  font-weight: bold;
+  color: white;
+  display: flex;
+  height: 250px;
+}
+.one {
+  background-image: url('../images/img-story-main.png');
+  background-size: cover;
+  font-size: 40px;
+}
+.two {
+  background-image: url('../images/img-story-2.png');
+  background-size: auto;
+  font-size: 30px;
+}
+.three {
+  background-image: url('../images/img-story-3.png');
+  background-size: auto;
+  font-size: 30px;
+}
+.five {
+  background-image: url('../images/img-story-1.png');
+  background-size: cover;
+  font-size: 30px;
 }
