--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -69,12 +69,14 @@ html, body {
   font-size: 17px;
   color: black;
 }
-.title {
+.article .title {
   font-family: Georgia;
   font-weight: bold;
   color: white;
   display: flex;
   height: 250px;
+  align-items: center;
+  text-align: center;
 }
 .one {
   background-image: url('../images/img-story-main.png');
@@ -109,6 +111,7 @@ html, body {
   height: auto;
   margin: 20px 20px;
   position: relative;
+
 }
 .theory .article .content {
   width: auto;
@@ -121,6 +124,12 @@ html, body {
   position: relative;
   margin: 10px auto;
   min-height: 120px;
+  font-family: Georgia;
+}
+.article h3 {
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
 }
 .content p {
   width: auto;
@@ -132,4 +141,57 @@ html, body {
   position: relative;
   margin: 40px auto;
   text-align: center;
+}
+.article .bites{
+  display: flex;
+  flex-direction: column;
+}
+.bites div {
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
+  padding: 12px;
+  border-bottom: 1px solid black;
+}
+footer {
+  display: flex;
+  width: 700px;
+  height: 300px;
+  position: relative;
+  background-color: Mediumaquamarine;
+  top: 150px;
+  align-items: center;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+}
+footer .title {
+  display: flex;
+  align-items: center;
+  width: auto;
+  height: 40px;
+  padding: 0 40px;
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  border-right: 3px solid white;
+  margin-right: 40px;
+}
+footer .nav {
+  width: auto;
+  position: relative;
+}
+footer .nav a {
+  margin: 0 6px;
+  color: black;
+}
+footer .slogan {
+  width: auto;
+  position: relative;
+  padding: 5px;
+  font-size: 14px;
+  text-align: center;
+  margin: 15px;
 }
